Minor fixes + about us new images

--- a/tjanster/brf/statusbesiktning/index.html
+++ b/tjanster/brf/statusbesiktning/index.html
@@ -262,7 +262,9 @@
 						<div class="center">
 							<h2 class="common-IntroText">Varför anlita Besiktningsman.se att utföra en statusbesiktning?</h2>
 							<p class="common-BodyText margin-bottom-5">
-Om ni vill veta i vilket skick fastigheten är eller är osäkra på vad som skall göras och i vilken ordning, är det bra att få en statusbesiktning utförd. Det behöver inte bara vara fråga om renovering eller ombyggnad utan kan också avse installationer såsom exempelvis el, ventilation och rör. Besiktningsutlåtandet kan ni sedan använda som stöd för framtida underhåll, ombyggnads- eller renoveringsprojekt. 
+								Om ni vill veta i vilket skick fastigheten är eller är osäkra på vad som skall göras och i vilken ordning, är det bra att få en statusbesiktning utförd.
+								Det behöver inte bara vara fråga om renovering eller ombyggnad utan kan också avse installationer såsom exempelvis el, ventilation och rör.
+								Besiktningsutlåtandet kan ni sedan använda som stöd för framtida underhåll, ombyggnads- eller renoveringsprojekt.
 							</p>
 							<ul class="flex margin-bottom-3">
 								<li class="col-4-12">
@@ -273,7 +275,6 @@ Om ni vill veta i vilket skick fastigheten är eller är osäkra på vad som ska
 										som arbetar helt digitalt med besiktningsappen iSpect.
 									 </p>
 								</li>
-
 								<li class="col-4-12">
 									<img src="../../../assets/svg/iSpectSquare_icon.svg" alt="Ikon som illusterar insikt" style="width:80px;">
 									<h3 class="equalElement common-BodyTitle">iSpect</h3>
@@ -399,7 +400,7 @@ Om ni vill veta i vilket skick fastigheten är eller är osäkra på vad som ska
 			</div>
 			<div class="secondary-column">
 				<div class="customers">
-					<p class="copy-1 common-BodyTitle">Vi är de enda inom branschen som levererar digitala felbilagor direkt efter besiktningen - med iSpect!</p>
+					<p class="copy-1 common-BodyTitle">Vi är de enda inom branschen som levererar digitala felbilagor direkt efter besiktningen <br> - med iSpect!</p>
 					<p class="copy-2 common-BodyText">Gör som många andra och anlita Besiktningsman.se</p>
 					<ul class="customer-logos">
 						<li class="customer-logo">
@@ -439,7 +440,7 @@ Om ni vill veta i vilket skick fastigheten är eller är osäkra på vad som ska
 									I iSpect:s feldatabas har vi trehundra tusen av de vanligaste förekommande felen vid nyproduktion och rot.
 								</p>
 							<li class="col-6-12 bottom">
-								<img src="../../../assets/img/backgrounds/inspectorIpad.JPG" class="soft-shadow img-border-radius" alt="Foto av besiktningsman" />
+								<img src="../../../assets/img/ispect/bm_inspector_worker.jpg" class="soft-shadow img-border-radius" alt="Foto av besiktningsman" />
 							</li>
 						</ul>
 					</div>
@@ -452,7 +453,7 @@ Om ni vill veta i vilket skick fastigheten är eller är osäkra på vad som ska
 									Därmed kan ni påbörja er planering med besiktningsutlåtandet som utgångspunkt.
 								</p>
 							<li class="col-6-12 bottom">
-								<img src="../../../assets/img/backgrounds/inspectorFloor.JPG" class="soft-shadow img-border-radius" alt="Foto av besiktningsman" />
+								<img src="../../../assets/img/ispect/bm_inspector_withipad.jpg" class="soft-shadow img-border-radius" alt="Foto av besiktningsman" />
 							</li>
 						</ul>
 					</div>
