--- a/tjanster/brf/garantibesiktning/bekraftelse/index.html
+++ b/tjanster/brf/garantibesiktning/bekraftelse/index.html
@@ -57,6 +57,10 @@
 		  src="https://www.facebook.com/tr?id=1747503458639948&ev=PageView&noscript=1"
 		/></noscript>
 		<!-- End Facebook Pixel Code -->
+	<!-- Event snippet for GB BRF Form conversion page -->
+	<script>
+	  gtag('event', 'conversion', {'send_to': 'AW-997882926/lb88CLWW0qQBEK746dsD'});
+	</script>
 </head>
 
 <body class="slides scroll animated simplifiedMobile defaultScroll">
