--- a/tjanster/entreprenad/slutbesiktning/index.html
+++ b/tjanster/entreprenad/slutbesiktning/index.html
@@ -90,6 +90,10 @@
 	</script>
 	<noscript><img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=1747503458639948&ev=PageView&noscript=1" /></noscript>
 	<!-- End Facebook Pixel Code -->
+	<!-- Event snippet for GB BRF Form conversion page -->
+	<script>
+	  gtag('event', 'conversion', {'send_to': 'AW-997882926/lb88CLWW0qQBEK746dsD'});
+	</script>
 </head>
 
 <body class="slides scroll simplifiedMobile defaultScroll">
