fixing Träning och mentorskap

--- a/karriar/index.html
+++ b/karriar/index.html
@@ -26,6 +26,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
 	<!-- Styles -->
 	<link href="../css/slides.css" rel="stylesheet" type="text/css">
+	<link href="../css/career.css" rel="stylesheet" type="text/css">
 	<!-- Google Tag Manager -->
 	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -161,7 +162,6 @@
 	    <div class="stripe s3"></div>
 	    <div class="stripe s4"></div>
 	</div>
-<<<<<<< HEAD
 	<section class="Stripe-Image-Hero Hero">
 		<div class="Hero__message">
 			<div class="Hero__title">
@@ -278,15 +278,14 @@
 						<div class="QuoteCard MediaElement">
 							<div class="QuoteCard__card">
 								<div class="QuoteCard__image Helm__background--purple6">
-									<img src="../assets/img/backgrounds/bmPinpoint.jpg" class="image" alt="Quote image">
+									<img src="../assets/img/backgrounds/bu_martin.jpg" class="image" alt="Quote image">
 								</div>
 								<div class="QuoteCard__body">
 									<div class="QuoteCard__text">
 										<p class="common-IntroText">
-											Med konstant utveckling av branschregler och byggstandarder
-											är det helt avgörande för varje besiktningsman att kontinuerligt utbilda sig.
-											Processen blir avsevärt mycket snabbare och enklare med hjälp av vår utbildningstjänst
-											'Besiktningsutbildarna.se'
+											Med konstant utveckling av branschregler och byggnadsstandarder är det avgörande för varje besiktningsman att kontinuerligt utbilda sig.
+											Därför har vi tagit fram den helomtäckande utbildningen 'Besiktningsutbildarna.se' som håller både besiktningsmän samt personal välutbildade
+											inom allt bygg & besiktningar.
 										</p>
 									</div>
 									<div class="QuoteCard__byContainer common-UppercaseText">
@@ -310,7 +309,7 @@
       <h3 class="common-PageTitle Helm__text--white">Hjälp oss säkerställa Sveriges framtida byggkvalité</span></h3>
     </div>
     <div class="OpenCTA__cta">
-			<a class="typeform-share common-Button text-blue" href="https://sebastian209.typeform.com/to/MTdpEL" data-mode="1" target="_blank">Ta kontakt med oss!</a>
+			<a class="typeform-share common-Button text-blue" href="https://sebastian209.typeform.com/to/MTdpEL" data-mode="1" target="_blank">Våra öppna positioner</a>
 			<script>
 				(function() {
 					var qs, js, q, s, d = document,
@@ -331,9 +330,6 @@
     </div>
   </div>
 </section>
-
-=======
->>>>>>> b42d8e62bf6a5e738279caf15054484579fa5343
 	<!-- HEADER -->
 	<section class="slide" id="career" style="background: transparent;">
 		<div class="content">
@@ -342,17 +338,10 @@
 				<div class="container-lg center margin-top-1 margin-bottom-8">
 					<h1 class="common-IntroText">Sveriges ledande entreprenadbesiktningsföretag <br>söker fler besiktningsmän!</h1>
 					<div class="announcement">
-<<<<<<< HEAD
 						<span class="new-pill">OBS</span>
 						<span class="message">
 							Vi söker även: <a href="https://sebastian209.typeform.com/to/MTdpEL" data-mode="drawer_left" target="_blank" class="typeform-share common-Link">Projektkoordinator</a>
 						</span>
-=======
-	          <span class="new-pill">OBS</span>
-	          <span class="message">
-	             Vi söker även: <a href="https://sebastian209.typeform.com/to/MTdpEL" data-mode="1" target="_blank" class="typeform-share common-Link">Projektkoordinator</a>
-	          </span>
->>>>>>> b42d8e62bf6a5e738279caf15054484579fa5343
 					</div>
 					<div class="pad shadow">
 
