Header title update GB brf

--- a/tjanster/brf/garantibesiktning/index.html
+++ b/tjanster/brf/garantibesiktning/index.html
@@ -218,7 +218,7 @@
 							<a href="../../brf/">Bostadsrättsförening<i class="icono-arrow2-left"></i></a>
 							<span class="bread-crumbs-title xs-hide">Garantibesiktning</span>
 						</div>
-						<h1 class="common-IntroText text-white">Garantibesiktning ger din BRF trygghet genom att byggfel upptäcks innan garantitiden löper ut.</h1>
+						<h1 class="common-IntroText text-white">Garantibesiktning/tvåårsbesiktning ger din BRF trygghet genom att byggfel upptäcks innan garantitiden löper ut</h1>
 						<p>
 							Är din BRF nybyggd eller har ni utfört ett renoveringsprojekt de senaste två åren?
 							<br>
