--- a/tjanster/entreprenad/fortlopandebesiktning/index.html
+++ b/tjanster/entreprenad/fortlopandebesiktning/index.html
@@ -370,20 +370,20 @@
 	<section class="slide form-section" data-name="boka" name="boka" data-title="boka" id="boka" style="background: #f6f9fc;">
 		<div class="container-lg">
 			<!-- temp typeform fix for mobile -->
-			<div class="mobileContactButtonFix">
+			<!-- <div class="mobileContactButtonFix">
 				<h3>Redo att boka?</h3>
 				<p>Fyll i formuläret så kontaktar vi dig.</p>
 				<a class="typeform-share common-Button blue text-white" href="https://besiktningsman-se.typeform.com/to/WkKJQ4" data-mode="popup" target="_blank">Kontakta mig </a>
 				<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
-			</div>
+			</div> -->
 			<!-- original typeform -->
 			<div class="formBackground form-column">
 				<h3 class="pad-header margin-0 center common-BodyTitle">
 					Redo att boka?
 					<p class="small bold dark margin-0" style="font-size: 16px;">Lämna ett meddelande så hör vi av oss.</p>
 				</h3>
-				<div class="typeform-widget" data-url="https://besiktningsman-se.typeform.com/to/WkKJQ4" data-hide-headers=true style="width: 100%; height: 400px;"></div>
-				<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+				<div class="typeform-widget" data-url="https://besiktningsman-se.typeform.com/to/WkKJQ4" style="width: 100%; height: 400px;"></div>
+				<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
 			</div>
 			<div class="secondary-column">
 				<div class="customers">
