remodel of mobile menu arriving top down + removed logo + removed double tag manager scripts

--- a/tjanster/brf/bekraftelse/index.html
+++ b/tjanster/brf/bekraftelse/index.html
@@ -60,15 +60,6 @@
 </head>
 
 <body class="slides scroll animated simplifiedMobile defaultScroll">
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-11858478-1"></script>
-	<script>
-	  window.dataLayer = window.dataLayer || [];
-	  function gtag(){dataLayer.push(arguments);}
-	  gtag('js', new Date());
-
-	  gtag('config', 'UA-11858478-1');
-	</script>
 	<!-- SVG Library -->
 	<svg xmlns="http://www.w3.org/2000/svg" style="display:none">
 		  <symbol id="close" viewBox="0 0 30 30"><path d="M15 0c-8.3 0-15 6.7-15 15s6.7 15 15 15 15-6.7 15-15-6.7-15-15-15zm5.7 19.3c.4.4.4 1 0 1.4-.2.2-.4.3-.7.3s-.5-.1-.7-.3l-4.3-4.3-4.3 4.3c-.2.2-.4.3-.7.3s-.5-.1-.7-.3c-.4-.4-.4-1 0-1.4l4.3-4.3-4.3-4.3c-.4-.4-.4-1 0-1.4s1-.4 1.4 0l4.3 4.3 4.3-4.3c.4-.4 1-.4 1.4 0s.4 1 0 1.4l-4.3 4.3 4.3 4.3z"/></symbol>
@@ -112,15 +103,15 @@
 			<div class="left">
 				<a href="../../../../../"><img src="../../../../../assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width:200px;"></a>
 			</div>
-			<div class="right"><span class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu"></use></svg></span></div>
+			<div class="right"><span class="button actionButton sidebarTrigger"  data-sidebar-id="position-top"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu"></use></svg></span></div>
 		</div>
 	</nav>
 	<!-- Sidebar -->
-	<nav class="sidebar white" data-sidebar-id="1">
+	<nav class="sidebar top white text-blueGrey"  data-sidebar-id="position-top">
 		<div class="close"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use></svg></div>
 		<div class="content">
-			<a href="../../../" class="logo"><img src="../../../assets/svg/bm_se_checkmark_color.svg" alt="Besiktningsman.se"></a>
-			<ul class="mainMenu text-blue">
+
+			<ul class="mainMenu center margin-top-1">
 
 				<li><a href="../../../#tjanster"><p>Tjänster</p></a></li>
 				<br>
