--- a/tjanster/privat/index.html
+++ b/tjanster/privat/index.html
@@ -74,10 +74,6 @@
 </head>
 
 <body class="slides scroll animated simplifiedMobile defaultScroll">
-	<!-- Google Tag Manager (noscript) -->
-	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MXG3P8L"
-	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-	<!-- End Google Tag Manager (noscript) -->
 	<!-- SVG Library -->
 	<svg xmlns="http://www.w3.org/2000/svg" style="display:none">
 		  <symbol id="close" viewBox="0 0 30 30"><path d="M15 0c-8.3 0-15 6.7-15 15s6.7 15 15 15 15-6.7 15-15-6.7-15-15-15zm5.7 19.3c.4.4.4 1 0 1.4-.2.2-.4.3-.7.3s-.5-.1-.7-.3l-4.3-4.3-4.3 4.3c-.2.2-.4.3-.7.3s-.5-.1-.7-.3c-.4-.4-.4-1 0-1.4l4.3-4.3-4.3-4.3c-.4-.4-.4-1 0-1.4s1-.4 1.4 0l4.3 4.3 4.3-4.3c.4-.4 1-.4 1.4 0s.4 1 0 1.4l-4.3 4.3 4.3 4.3z"/></symbol>
@@ -121,39 +117,35 @@
 			<div class="left">
 				<a href="../../"><img src="../../assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width:200px;"></a>
 			</div>
-			<div class="right"><span class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu"></use></svg></span></div>
+			<div class="right"><span class="button actionButton sidebarTrigger"  data-sidebar-id="position-top"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu"></use></svg></span></div>
 		</div>
 	</nav>
 	<!-- Sidebar -->
-	<nav class="sidebar white" data-sidebar-id="1">
+	<nav class="sidebar top white text-blueGrey"  data-sidebar-id="position-top">
 		<div class="close"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use></svg></div>
 		<div class="content">
-			<a href="../../" class="logo"><img src="../../assets/svg/bm_se_checkmark_color.svg" alt="Besiktningsman.se"></a>
-			<ul class="mainMenu text-blue">
 
-				<li><a href="../../#tjanster"><p>Tjänster</p></a></li>
+			<ul class="mainMenu center margin-top-1">
+
+				<li><a href="../../#tjanster">Tjänster</a></li>
 				<br>
 				<br>
-				<li><a href="../../kontakt/"><p>Kontakta oss</p></a></li>
+				<li><a href="../../kontakt/">Kontakta oss</a></li>
 				<br>
 				<br>
-				<li><a href="../../karriar/"><p>Karriär</p></a></li>
+				<li><a href="../../karriar/">Karriär</a></li>
 				<br>
 				<br>
-				<li><a href="../../om_oss/"><p>Om oss</p></a></li>
+				<li><a href="../../om_oss/">Om oss</a></li>
 				<br>
 				<br>
-				<li><a href="../../nyheter/"><p>Nyheter</p></a></li>
+				<li><a href="../../nyheter/">Nyheter</a></li>
 				<br>
 				<br>
-				<li><a href="../../dokument/"><p>Dokument</p></a></li>
+				<li><a href="../../dokument/">Dokument</a></li>
 				<br>
 				<br>
-				<li>
-					<a href="tel:0101654000">
-						<p class="bold">Telefon: 010-165 40 00</p>
-					</a>
-				</li>
+				<li><a href="tel:0101654000">Telefon: 010-165 40 00</a></li>
 			</ul>
 
 		</div>
