mobile menu syntax fix

--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -126,29 +126,25 @@
 
 			<ul class="mainMenu center margin-top-1">
 
-				<li><a href="../#tjanster"><p>Tjänster</p></a></li>
+				<li><a href="../#tjanster">Tjänster</a></li>
 				<br>
 				<br>
-				<li><a href="../kontakt/"><p>Kontakta oss</p></a></li>
+				<li><a href="../kontakt/">Kontakta oss</a></li>
 				<br>
 				<br>
-				<li><a href="../karriar/"><p>Karriär</p></a></li>
+				<li><a href="../karriar/">Karriär</a></li>
 				<br>
 				<br>
-				<li><a href="../om_oss/"><p>Om oss</p></a></li>
+				<li><a href="../om_oss/">Om oss</a></li>
 				<br>
 				<br>
-				<li><a href="../nyheter/"><p>Nyheter</p></a></li>
+				<li><a href="../nyheter/">Nyheter</a></li>
 				<br>
 				<br>
-				<li><a href="../dokument/"><p>Dokument</p></a></li>
+				<li><a href="../dokument/">Dokument</a></li>
 				<br>
 				<br>
-				<li>
-					<a href="tel:0101654000">
-						<p class="bold">Telefon: 010-165 40 00</p>
-					</a>
-				</li>
+				<li><a href="tel:0101654000">Telefon: 010-165 40 00</a></li>
 			</ul>
 
 		</div>
