404 page syntax fix

--- a/404/index.html
+++ b/404/index.html
@@ -23,10 +23,7 @@
 	<meta name="twitter:description" content="404 - Sidan finns inte. Gå tillbaka till huvudsidan för att komma vidare." />
 	<meta name="twitter:title" content="Sidan du besökte finns inte." />
 	<!-- Fonts and Material Icons -->
-
-<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
-
-
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
 	<!-- Styles -->
 	<link href="../css/slides.css" rel="stylesheet" type="text/css">
 	<!-- Google Tag Manager -->
@@ -92,11 +89,10 @@
 	<noscript><img height="1" width="1" style="display:none"
 	  src="https://www.facebook.com/tr?id=1747503458639948&ev=PageView&noscript=1"
 	/></noscript>
-	<!-- Copy the script in the head -->
+	<!-- animation library -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js" charset="utf-8"></script>
 </head>
-
 <body class="slides scroll simplifiedMobile animated">
 	<!-- SVG Library -->
 	<svg xmlns="http://www.w3.org/2000/svg" style="display:none">
