--- a/dokument/index.html
+++ b/dokument/index.html
@@ -105,6 +105,10 @@
 	</script>
 </head>
 <body class="slides scroll simplifiedMobile">
+	<!-- Google Tag Manager (noscript) -->
+	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MXG3P8L"
+	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+	<!-- End Google Tag Manager (noscript) -->
 	<!-- SVG Library -->
 	<svg xmlns="https://www.w3.org/2000/svg" style="display:none">
 		<symbol id="close" viewBox="0 0 30 30">
