--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -24,8 +24,6 @@
 	<meta name="twitter:title" content="Nyheter från Besiktningsman.se" />
 	<!-- Fonts and Material Icons -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
-
-
 	<!-- Styles -->
 	<link href="../css/slides.css" rel="stylesheet" type="text/css">
 	<!-- Google Tag Manager -->
@@ -111,6 +109,10 @@
 </head>
 
 <body class="slides scroll simplifiedMobile">
+	<!-- Google Tag Manager (noscript) -->
+	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MXG3P8L"
+	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+	<!-- End Google Tag Manager (noscript) -->
 	<!-- SVG Library -->
 	<svg xmlns="http://www.w3.org/2000/svg" style="display:none">
 		<symbol id="close" viewBox="0 0 30 30">
