--- a/tjanster/brf/garantibesiktning/index.html
+++ b/tjanster/brf/garantibesiktning/index.html
@@ -95,6 +95,10 @@
 </head>
 
 <body class="slides scroll simplifiedMobile defaultScroll">
+	<!-- Google Tag Manager (noscript) -->
+	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MXG3P8L"
+	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+	<!-- End Google Tag Manager (noscript) -->
 	<!-- SVG Library -->
 	<svg xmlns="http://www.w3.org/2000/svg" style="display:none">
 		<symbol id="close" viewBox="0 0 30 30">
@@ -174,7 +178,7 @@
 	<nav class="sidebar top white text-blueGrey"  data-sidebar-id="position-top">
 		<div class="close"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use></svg></div>
 		<div class="content">
-			
+
 			<ul class="mainMenu center margin-top-1">
 
 				<li><a href="../../../#tjanster">Tjänster</a></li>
