Removed links to privat

--- a/index.html
+++ b/index.html
@@ -180,7 +180,6 @@
 						<ul>
 							<li><a href="#entreprenad" class="common-Button text-blue fromCenter margin-bottom-1">ENTREPRENAD</a></li>
 							<li><a href="#brf" class="common-Button text-blue fromCenter margin-bottom-1">brf</a></li>
-							<li><a href="#privat" class="common-Button text-blue fromCenter margin-bottom-1">PRIVAT</a></li>
 						</ul>
 						<a href="tel:0101654000" id="mobilePhoneNumber">
 							<p class="common-BodyText text-white margin-0">Vår växel är öppen vardagar mellan 08:30 - 17:00</p>
@@ -317,7 +316,6 @@
 						<h2>Vad söker du?</h2>
 						<p class="menu inlineBlock margin-right-2 underline"><a href="#entreprenad">Entreprenad</a></p>
 						<p class="menu inlineBlock underline"><a href="#brf">BRF</a></p>
-						<p class="menu inlineBlock margin-left-2 underline"><a href="#privat">Privat</a></p>
 					</div>
 				</div>
 			</div>
@@ -425,22 +423,13 @@
 							<li class="col-6-12 left cell-32">
 								<h2 class="common-IntroText">Besiktningstjänster för privatpersoner</h2>
 								<h3 class="common-BodyTitle">Småhus, lägenheter och fritidshus</h3>
-								<p class="common-BodyText">Besiktningsman.se erbjuder besiktningstjänster för samtliga fack för besiktning av småhus, fritidshus och lägenheter, samt KA-ansvariga.</p>
-								<div class="section-Links">
-									<a href="tjanster/privat/">
-										<p class="common-BodyTitle2 margin-bottom-1">Läs mer om våra tjänster</p>
-										<p class="common-Link">Gå till tjänster för privatpersoner<i class="icono-arrow2-left"></i></p>
-									</a>
-									<p  class="common-BodyTitle2">Redo att boka? Hör av dig så hjälper vi dig!</p>
-									<a class="typeform-share common-Button blue text-white margin-bottom-2" href="https://besiktningsman-se.typeform.com/to/Xyfx6y" data-mode="drawer_left" target="_blank">
-										Lämna ett meddelande
-									</a>
-									<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
-									<a href="tel:0101654000">
-										<p class="common-Link">Ni kan även ringa oss på: 010-165 40 00</p>
-									</a>
+								<div class="announcement">
+				          <span class="new-pill">OBS</span>
+				          <span class="message">
+				             
+				          </span>
 								</div>
-							</li>
+								<p class="common-BodyText">Besiktningsman.se arbetar uteslutande med kommersiella kunder, dvs juridiska personer och utför således inte besiktningsuppdrag till privatpersoner.</p>
 							<li class="col-6-12 left fromRight">
 								<img class="macbook-62 margin-bottom-3 soft-shadow img-border-radius" id="landingPagePhotos" width="1000" height="700" src="./assets/img/backgrounds/summer/summer_house.jpg" alt="Traditionellt sommarhus i svenska skärgården" />
 							</li>
