Re-added header page for privat

--- a/tjanster/privat/index.html
+++ b/tjanster/privat/index.html
@@ -155,22 +155,19 @@
 		</div>
 	</nav>
 	<!-- HEADER -->
-	<section class="slide autoHeight fade" data-name="home" id="landingHeader">
+	<section class="slide fade" data-name="home" id="landingHeader">
 		<div class="content">
-			<div class="container" style="height: 560px;">
+			<div class="container">
 				<div class="wrap">
 
 					<div class="fix-10-12" style="padding-top: 5%;">
 						<h1 class="hero-title">Besiktningstjänster för privatpersoner</h1>
-						<p>
-							Besiktningsman.se erbjuder ett komplett och rikstäckande utbud av tjänster<br> för entreprenadbesiktning för nyproduktion och ROT samt KA.
-						</p>
-						<!-- <div class="announcement white">
+						<div class="announcement white">
 		          <span class="new-pill">OBS</span>
-		          <span class="message">
-		              Besiktningstjänsterna för privatpersoner är för tillfället fullbokade.
+		          <span class="message left" style="margin-left:5px;">
+		            För att ytterligare förstärka servicen i vår kärnverksamhet,<br> kommersiell besiktning av nyproduktion och ROT, <br> har vi f.r.o.m 26/8 2019 valt att avsluta besiktningar åt konsument.
 		          </span>
-						</div> -->
+						</div>
 					</div>
 
 				</div>
@@ -178,7 +175,7 @@
 		</div>
 		<div class="background" style="background-image:url(../../assets/img/backgrounds/summer/summer_house.jpg)" alt="Fritidshus på svenska västkusten"></div>
 	</section>
-	<section class="slide whiteSlide autoHeight" id="privat-offer">
+	<!-- <section class="slide whiteSlide autoHeight" id="privat-offer">
 		<div class="container">
 			<div class="container-lg">
 				<div class="fix-10-12 margin-top-1">
@@ -399,8 +396,6 @@
 						</div>
 						<br>
 						<br>
-
-						<!-- övriga tjänster -->
 						<h2 class="common-BodyTitle">Övriga tjänster</h2>
 						<div class="accordion margin-bottom-3">
 
@@ -486,7 +481,7 @@
 								</ul>
 							</div>
 						</div>
-						<!-- grid div end -->
+
 					</div>
 					<div class="fix-10-12">
 						<h2 class="common-BodyTitle">Som exempel på ovan beskrivna besiktningstjänster kan nämnas:</h2>
@@ -521,17 +516,17 @@
 
 	</section>
 	<section class="slide white form-section">
-		<!-- <div class="margin-0 center">
+		<div class="margin-0 center">
 			<div class="announcement">
 				<span class="new-pill">OBS</span>
 				<span class="message left">
 						Besiktningstjänsterna för privatpersoner är för tillfället fullbokade.
 				</span>
 			</div>
-		</div> -->
+		</div>
 		<div class="container-lg">
 				<div class="formBackground form-column">
-					<!-- <div class="inactive-Overlay"></div> -->
+					<div class="inactive-Overlay"></div>
 						<h3 class="pad-header margin-0 text-blueGrey center">
 							Redo att boka?
 							<p class="small bold dark margin-0 common-BodyText" style="font-size: 16px;">Lämna ett meddelande så hör vi av oss.</p>
@@ -549,9 +544,7 @@
 							<li class="customer-logo">
 								<img src="../../assets/img/logos/tjanster/einarmattsson_logo.png" alt="EINAR MATTSSON">
 							</li>
-							<!-- <li class="customer-logo">
-								<img src="../../../assets/img/logos/tjanster/ssm_logo.png" alt="SSM">
-							</li> -->
+
 							<li class="customer-logo">
 								<img src="../../assets/img/logos/tjanster/skanska_logo.png" alt="SKANSKA">
 							</li>
@@ -566,7 +559,7 @@
 				</div>
 
 		</div>
-	</section>
+	</section> -->
 <!-- Footer -->
 <section class="slide customFooter autoHeight">
 	<div class="content">
