text and style updates for privat service announcements

--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
 
 				          </span>
 								</div>
-								<p class="common-BodyText">Besiktningsman.se arbetar uteslutande med kommersiella kunder, dvs juridiska personer och utför således inte besiktningsuppdrag till privatpersoner.</p>
+								<p class="common-BodyText">För att ytterligare förstärka servicen i vår kärnverksamhet, kommersiell besiktning av nyproduktion och ROT, har vi f.r.o.m 26/8 2019 valt att avsluta besiktningar åt konsument.</p>
 							<li class="col-6-12 left fromRight">
 								<img class="macbook-62 margin-bottom-3 soft-shadow img-border-radius" id="landingPagePhotos" width="1000" height="700" src="./assets/img/backgrounds/summer/summer_house.jpg" alt="Traditionellt sommarhus i svenska skärgården" />
 							</li>
