--- a/tjanster/privat/index.html
+++ b/tjanster/privat/index.html
@@ -155,19 +155,18 @@
 		</div>
 	</nav>
 	<!-- HEADER -->
-	<section class="slide fade" data-name="home" id="landingHeader">
+	<section class="slide autoHeight fade" data-name="home" id="landingHeader">
 		<div class="content">
-			<div class="container">
+			<div class="container" style="height: 560px;">
 				<div class="wrap">
 
 					<div class="fix-10-12" style="padding-top: 5%;">
 						<h1 class="hero-title">Besiktningstjänster för privatpersoner</h1>
 						<div class="announcement white">
 		          <span class="new-pill">OBS</span>
-		          <span class="message left" style="margin-left:5px;">
-		            För att ytterligare förstärka servicen i vår kärnverksamhet,<br> kommersiell besiktning av nyproduktion och ROT, <br> har vi f.r.o.m 26/8 2019 valt att avsluta besiktningar åt konsument.
-		          </span>
+		          <span class="message left">Uppdatering</span>
 						</div>
+						<p>För att ytterligare förstärka servicen i vår kärnverksamhet,<br> kommersiell besiktning av nyproduktion och ROT, <br> har vi f.r.o.m 26/8 2019 valt att avsluta besiktningar åt konsument.</p>
 					</div>
 
 				</div>
