new projects layout

--- a/projekt/index.html
+++ b/projekt/index.html
@@ -161,73 +161,71 @@
 	    <div class="stripe s3"></div>
 	    <div class="stripe s4"></div>
 	</div>
-	<!-- content -->
-	<section class="slide projects" style="background: transparent;">
-		<div class="content">
-			<div class="container margin-top-1" style="height:560px;">
-					<h1 class="common-IntroText center">Våra projekt</h1>
-					<p class="common-BodyText center">Här byggs framtiden med noll fel</p>
-					<div class="photobanner">
-						<img class="first" src="../assets/img/projects/panorama_projects.png" alt="Panorama bild med utvalda projekt" />
-						<!-- duplicates to fake the panorama fx -->
-						<img src="../assets/img/projects/panorama_projects.png" alt="Panorama bild med utvalda projekt" />
-						<img src="../assets/img/projects/panorama_projects.png" alt="Panorama bild med utvalda projekt" />
-						<img src="../assets/img/projects/panorama_projects.png" alt="Panorama bild med utvalda projekt" />
-						<img src="../assets/img/projects/panorama_projects.png" alt="Panorama bild med utvalda projekt" />
-					</div>
-			</div>
-		</div>
-	</section>
-	<!-- HEADER new -->
-	<!-- <section class="slide" style="background: transparent;">
-		<div class="content">
-			<div class="container margin-top-1" style="height:560px;">
-					<h1 class="common-IntroText center">Våra projekt</h1>
-					<p class="common-BodyText center">Här byggs framtiden med noll fel</p>
-					<div>
-						  <marquee direction="left" speed="normal" behavior="loop" start="fromRight" >
-						     <img src="../assets/img/projects/kv_ektorp.jpg" alt="" >
-								 <img src="../assets/img/projects/kv_ektorp.jpg" alt="" >
-								 <img src="../assets/img/projects/kv_ektorp.jpg" alt="" >
-						     <img src="../assets/img/projects/kv_ektorp.jpg" alt="" >
-								 <img src="../assets/img/projects/kv_ektorp.jpg" alt="" >
-								 <img src="../assets/img/projects/kv_ektorp.jpg" alt="" >
-						     <img src="../assets/img/projects/kv_ektorp.jpg" alt="" >
-								 <img src="../assets/img/projects/kv_ektorp.jpg" alt="" >
-								 <img src="../assets/img/projects/kv_ektorp.jpg" alt="" >
-						     <img src="../assets/img/projects/kv_ektorp.jpg" alt="" >
-								 <img src="../assets/img/projects/kv_ektorp.jpg" alt="" >
-								 <img src="../assets/img/projects/kv_ektorp.jpg" alt="" >
-						  </marquee>
-						  <marquee direction="left" speed="normal" behavior="loop" start="fromLeft" >
-						     <img src="../assets/img/projects/kv_ektorp.jpg" alt="" >
-								 <img src="../assets/img/projects/kv_ektorp.jpg" alt="" >
-								 <img src="../assets/img/projects/kv_ektorp.jpg" alt="" >
-						     <img src="../assets/img/projects/kv_ektorp.jpg" alt="" >
-								 <img src="../assets/img/projects/kv_ektorp.jpg" alt="" >
-								 <img src="../assets/img/projects/kv_ektorp.jpg" alt="" >
-						     <img src="../assets/img/projects/kv_ektorp.jpg" alt="" >
-								 <img src="../assets/img/projects/kv_ektorp.jpg" alt="" >
-								 <img src="../assets/img/projects/kv_ektorp.jpg" alt="" >
-						     <img src="../assets/img/projects/kv_ektorp.jpg" alt="" >
-								 <img src="../assets/img/projects/kv_ektorp.jpg" alt="" >
-								 <img src="../assets/img/projects/kv_ektorp.jpg" alt="" >
-						  </marquee>
-					</div>
+	<!-- intro titles -->
+	<div class="container-lg margin-bottom-5" style="margin-top: 150px;">
+		<h1 class="common-IntroText center">Våra projekt</h1>
+		<p class="common-BodyText center">Här byggs framtiden med noll fel</p>
+	</div>
 
-			</div>
+	<!-- projects new -->
+	 <div class="projects-main">
+		<div class="single-column">
+			<img src="../assets/img/projects/skanska_bjork.png" alt="image">
+			<img src="../assets/img/projects/skanska_brfpyrolan.png" alt="image">
+			<img src="../assets/img/projects/skanska_lamellen.png" alt="image">
+			<img src="../assets/img/projects/skanska_leendet.png" alt="image">
+			<img src="../assets/img/projects/skanska_brftheview.png" alt="image">
+
 		</div>
-	</section> -->
+		<div class="single-column">
+			<img src="../assets/img/projects/skanska_kvartpasen.png" alt="image">
+			<img src="../assets/img/projects/skanska_soldathemmet.png" alt="image">
+			<img src="../assets/img/projects/skanska_linabergshojden.png" alt="image">
+			<img src="../assets/img/projects/skanska_kvartersonfjallet.png" alt="image">
+			<img src="../assets/img/projects/byggvesta_colonia.png" alt="image">
+		</div>
+		<div class="single-column" id="hideProjectMobile">
+			<img src="../assets/img/projects/byggvesta_bryggvagen.png" alt="image">
+			<img src="../assets/img/projects/byggvesta_brfgarvaren.png" alt="image">
+			<img src="../assets/img/projects/byggvesta_brfsorgenfri.png" alt="image">
+			<img src="../assets/img/projects/einarmattsson_klockarbacken.png" alt="image">
+			<img src="../assets/img/projects/myresjohus_mestapark.png" alt="image">
+			<img src="../assets/img/projects/magnolia_m6.png" alt="image">
+		</div>
+		<div class="single-column" id="hideProjectMobile">
+
+			<img src="../assets/img/projects/byggvesta_brfektorp.png" alt="image">
+			<img src="../assets/img/projects/einarmattsson_haganova.png" alt="image">
+			<img src="../assets/img/projects/einarmattsson_taklampa.png" alt="image">
+			<img src="../assets/img/projects/skanska_brfLinabergsAlle.png" alt="image">
+			<img src="../assets/img/projects/skanska_bjork.png" alt="image">
+		</div>
+
+		<div class="single-column" id="hideProjectMobile">
+			<img src="../assets/img/projects/almequity_kanotbryggan.png" alt="image">
+			<img src="../assets/img/projects/ebab_etaget.png" alt="image">
+			<img src="../assets/img/projects/aros_brfsjohusen3.png" alt="image">
+			<img src="../assets/img/projects/fbproduktion_rimsjohojden.png" alt="image">
+			<img src="../assets/img/projects/skanska_brfostrafrestaby.png" alt="image">
+		</div>
+		<div class="single-column" id="hideProjectMobile">
+			<img src="../assets/img/projects/ncc_sodersjukhuset.png" alt="image">
+			<img src="../assets/img/projects/shhbostad_brfbrygghuset.png" alt="image">
+			<img src="../assets/img/projects/strandparken_folkhem.png" alt="image">
+			<img src="../assets/img/projects/fbprod_brfFronasGarde.png" alt="image">
+			<img src="../assets/img/projects/storstaden_brfstadsporten.png" alt="image">
+		</div>
+	</div>
 
 	<section class="slide whiteSlide" id="footer-nav">
 		<div class="container-lg padding-5 center">
-			<h3 class="center common-IntroText">Gå vidare här:</h3>
+			<h3 class="center common-IntroText2">Läs mer här:</h3>
 			<div class="center-m-down">
 					<a href="../../om_oss/" class="common-Button text-blue">
 						Om oss
 					</a>
-					<a href="../../helhetskoncept/" class="common-Button text-blue">
-						Vårt helhetskoncept
+					<a href="../ispect/" class="common-Button text-blue">
+						iSpect - Ett helhetskoncept
 					</a>
 					<a href="../../tjanster/entreprenad/" class="common-Button text-blue">
 						Entreprenadbesiktning
@@ -337,6 +335,7 @@
 	<!-- Scripts -->
 	<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 	<script src="../js/slides.min.js" type="text/javascript" name="main-scripts"></script>
+	<script src="../js/custom.js" type="text/javascript" name="main-scripts"></script>
 </body>
 
 </html>
