--- a/tjanster/brf/index.html
+++ b/tjanster/brf/index.html
@@ -219,14 +219,15 @@
 					<div class="fix-10-12" style="padding-top: 5%;">
 						<h1 class="hero-title">Besiktningstjänster för bostadsrättsföreningar</h1>
 						<p>
-							Besiktningsman.se erbjuder ett komplett och rikstäckande utbud av besiktningstjänster vid nyproduktion, <br>ROT och KA-Kontrollansvarig för bostadsrättsföreningar.
+						  Besiktningsman.se erbjuder ett komplett och rikstäckande <br> utbud av besiktningstjänster vid nyproduktion, 
+						  <br>ROT och KA-Kontrollansvarig för bostadsrättsföreningar.
 						</p>
 					</div>
 
 				</div>
 			</div>
 		</div>
-		<div class="background" style="background-image:url(../../assets/img/backgrounds/summer/summer_apartments.jpg)" alt="Foto av ett snöigt innerstockholm"></div>
+		<div class="background" style="background-image:url(../../assets/img/backgrounds/winter/winter_apartments.jpg)" alt="Foto av ett snöigt innerstockholm"></div>
 	</section>
 	<section class="slide whiteSlide autoHeight" id="brf-offer">
 		<div class="container">
